ansible/files/consul/emojivoto.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emojivoto
spec:
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: emoji-svc
  namespace: emojivoto
spec:
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
    - name: prom
      port: 8801
      targetPort: 8801
  selector:
    app: emoji-svc
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: voting-svc
  namespace: emojivoto
spec:
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
    - name: prom
      port: 8801
      targetPort: 8801
  selector:
    app: voting-svc
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: emojivoto
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: web-svc
  type: ClusterIP
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "true"
